<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@android:color/transparent"
    android:orientation="vertical">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.google.android.material.imageview.ShapeableImageView
            android:id="@+id/weatherImage"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:layout_marginHorizontal="16dp"
            android:layout_marginVertical="5dp"
            android:src="@drawable/icon_weather_cloud"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/txtTemperature"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="16dp"
            android:layout_marginVertical="5dp"
            android:maxLength="2"
            android:text="40"
            android:textColor="@color/white"
            android:textSize="70sp"
            android:textStyle="bold"
            app:layout_constraintStart_toEndOf="@+id/weatherImage"
            app:layout_constraintTop_toTopOf="parent" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/txtDegreeType"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:maxLength="3"
            android:text="@string/o_c"
            android:textColor="@color/white"
            android:textSize="24sp"
            android:textStyle="bold"
            app:layout_constraintStart_toEndOf="@+id/txtTemperature"
            app:layout_constraintTop_toTopOf="parent" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/txtDescription"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:layout_marginEnd="16dp"
            android:textColor="@color/white"
            android:textSize="24sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@+id/txtTemperature"
            app:layout_constraintTop_toBottomOf="@+id/txtTemperature" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="10dp"
        android:layout_marginTop="10dp"
        android:orientation="horizontal"
        android:weightSum="3">

        <com.google.android.material.textview.MaterialTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="5dp"
            android:layout_weight="1"
            android:gravity="center"
            android:text="Wind Speed"
            android:textColor="@color/white"
            android:textSize="12dp" />

        <com.google.android.material.textview.MaterialTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="5dp"
            android:layout_weight="1"
            android:gravity="center"
            android:text="Air Pressure"
            android:textColor="@color/white"
            android:textSize="12dp" />

        <com.google.android.material.textview.MaterialTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="5dp"
            android:layout_weight="1"
            android:gravity="center"
            android:text="Humidity"
            android:textColor="@color/white"
            android:textSize="12dp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="10dp"
        android:orientation="horizontal"
        android:weightSum="3">

        <androidx.cardview.widget.CardView
            android:id="@+id/windSpeedLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:layout_weight="1"
            app:cardBackgroundColor="@color/white"
            app:cardCornerRadius="15dp"
            app:cardElevation="5dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <com.google.android.material.imageview.ShapeableImageView
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:src="@drawable/icon_wind" />

                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/txtWindSpeed"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_gravity="center_vertical"
                    android:gravity="center_vertical"
                    android:textColor="@color/black"
                    android:textSize="14sp" />
            </LinearLayout>
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/windPressureLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:layout_weight="1"
            app:cardBackgroundColor="@color/white"
            app:cardCornerRadius="15dp"
            app:cardElevation="5dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <com.google.android.material.imageview.ShapeableImageView
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:src="@drawable/icon_atmospheric_pressure" />

                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/txtWindPressure"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_gravity="center_vertical"
                    android:gravity="center_vertical"
                    android:textColor="@color/black"
                    android:textSize="14sp" />
            </LinearLayout>
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/windHumidityLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:layout_weight="1"
            app:cardBackgroundColor="@color/white"
            app:cardCornerRadius="15dp"
            app:cardElevation="5dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <com.google.android.material.imageview.ShapeableImageView
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:src="@drawable/icon_drop" />

                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/txtWindHumidity"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_gravity="center_vertical"
                    android:gravity="center_vertical"
                    android:textColor="@color/black"
                    android:textSize="14sp" />
            </LinearLayout>
        </androidx.cardview.widget.CardView>
    </LinearLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="10dp"
        android:layout_marginTop="15dp"
        android:background="@drawable/forecast_view_background">

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/txtForecastHeading"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:gravity="center"
            android:text="@string/weather_forecast"
            android:textColor="@color/grey"
            android:textSize="12dp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/todayHeading"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="10dp"
            android:layout_marginTop="15dp"
            android:gravity="center"
            android:text="@string/today"
            android:textColor="@color/grey"
            android:textSize="14dp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/txtForecastHeading" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/todayRecyclerView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            tools:listitem="@layout/forecast_item"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/todayHeading" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/tomorrowHeading"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="10dp"
            android:layout_marginTop="15dp"
            android:gravity="center"
            android:text="@string/tomorrow"
            android:textColor="@color/grey"
            android:textSize="14dp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/todayRecyclerView" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/tomorrowRecyclerView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:listitem="@layout/forecast_item"
            android:orientation="horizontal"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tomorrowHeading" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/dayAfterTomorrowHeading"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="10dp"
            android:layout_marginTop="15dp"
            android:gravity="center"
            android:text="@string/day_after_tomorrow"
            android:textColor="@color/grey"
            android:textSize="14dp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tomorrowRecyclerView" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/dayAfterTomorrowRecyclerView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:orientation="horizontal"
            tools:listitem="@layout/forecast_item"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/dayAfterTomorrowHeading" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:layout_marginHorizontal="10dp"
        android:layout_marginTop="5dp"
        android:orientation="horizontal"
        android:weightSum="3">

        <LinearLayout
            android:id="@+id/uvLayout"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:layout_weight="1"
            android:background="@drawable/forecast_view_background"
            android:orientation="vertical"
            android:padding="10dp">

            <com.google.android.material.imageview.ShapeableImageView
                android:layout_width="35dp"
                android:layout_height="35dp"
                android:src="@drawable/icon_sunny"
                android:tint="#FBBD00" />

            <com.google.android.material.textview.MaterialTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:gravity="center_vertical"
                android:text="@string/uv_index"
                android:textColor="@color/grey"
                android:textSize="12sp" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/txtUV"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:gravity="center_vertical"
                android:textColor="@color/white"
                android:textSize="14sp" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/feelsLikeLayout"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:layout_weight="1"
            android:background="@drawable/forecast_view_background"
            android:orientation="vertical"
            android:padding="10dp">

            <com.google.android.material.imageview.ShapeableImageView
                android:layout_width="35dp"
                android:layout_height="35dp"
                android:src="@drawable/icon_thermostat"
                android:tint="#D82222" />

            <com.google.android.material.textview.MaterialTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:gravity="center_vertical"
                android:text="@string/feels_like"
                android:textColor="@color/grey"
                android:textSize="12sp" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/txtFeelsLike"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:gravity="center_vertical"
                android:textColor="@color/white"
                android:textSize="14sp" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/visibilityLayout"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:layout_weight="1"
            android:background="@drawable/forecast_view_background"
            android:orientation="vertical"
            android:padding="10dp">

            <com.google.android.material.imageview.ShapeableImageView
                android:layout_width="35dp"
                android:layout_height="35dp"
                android:src="@drawable/icon_visibility"
                android:tint="@color/dark_grey" />

            <com.google.android.material.textview.MaterialTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:gravity="center_vertical"
                android:text="@string/visibility"
                android:textColor="@color/grey"
                android:textSize="12sp" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/txtVisibility"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:gravity="center_vertical"
                android:textColor="@color/white"
                android:textSize="14sp" />
        </LinearLayout>
    </LinearLayout>

    <com.google.android.material.textview.MaterialTextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:textColor="@color/black"
        android:textSize="14sp"
        android:textStyle="italic"
        android:layout_marginBottom="40dp"
        android:text="@string/created_by_joyjit_bhandari_n_android_developer"/>
</LinearLayout>