<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@android:color/transparent"
    android:orientation="vertical">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="90dp">

        <com.google.android.material.imageview.ShapeableImageView
            android:id="@+id/weatherImage"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:layout_marginHorizontal="16dp"
            android:layout_marginVertical="5dp"
            android:src="@drawable/icon_weather_cloud"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <com.google.android.material.imageview.ShapeableImageView
            android:id="@+id/txtTemperature"
            android:layout_width="100dp"
            android:layout_height="70dp"
            android:layout_margin="10dp"
            android:src="@drawable/simmer_bg_8dp_rounded"
            app:layout_constraintStart_toEndOf="@+id/weatherImage"
            app:layout_constraintTop_toTopOf="@+id/weatherImage" />

        <com.google.android.material.imageview.ShapeableImageView
            android:id="@+id/txtDegreeType"
            android:layout_width="50dp"
            android:layout_height="30dp"
            android:layout_margin="10dp"
            android:src="@drawable/simmer_bg_8dp_rounded"
            app:layout_constraintStart_toEndOf="@+id/txtTemperature"
            app:layout_constraintTop_toTopOf="parent" />

        <com.google.android.material.imageview.ShapeableImageView
            android:id="@+id/txtDescription"
            android:layout_width="0dp"
            android:layout_height="30dp"
            android:layout_margin="10dp"
            android:src="@drawable/simmer_bg_8dp_rounded"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/weatherImage"
            app:layout_constraintTop_toBottomOf="@+id/txtTemperature" />
    </androidx.constraintlayout.widget.ConstraintLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="10dp"
        android:layout_marginTop="10dp"
        android:orientation="horizontal"
        android:weightSum="3">

        <com.google.android.material.textview.MaterialTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="5dp"
            android:layout_weight="1"
            android:gravity="center"
            android:text="Wind Speed"
            android:textColor="@color/white"
            android:textSize="12dp" />

        <com.google.android.material.textview.MaterialTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="5dp"
            android:layout_weight="1"
            android:gravity="center"
            android:text="Air Pressure"
            android:textColor="@color/white"
            android:textSize="12dp" />

        <com.google.android.material.textview.MaterialTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="5dp"
            android:layout_weight="1"
            android:gravity="center"
            android:text="Humidity"
            android:textColor="@color/white"
            android:textSize="12dp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="10dp"
        android:orientation="horizontal"
        android:weightSum="3">

        <androidx.cardview.widget.CardView
            android:id="@+id/windSpeedLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:layout_weight="1"
            app:cardBackgroundColor="@color/white"
            app:cardCornerRadius="15dp"
            app:cardElevation="5dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <com.google.android.material.imageview.ShapeableImageView
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:src="@drawable/icon_wind" />

                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/txtWindSpeed"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_gravity="center_vertical"
                    android:gravity="center_vertical"
                    android:textColor="@color/black"
                    android:textSize="14sp" />
            </LinearLayout>
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/windPressureLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:layout_weight="1"
            app:cardBackgroundColor="@color/white"
            app:cardCornerRadius="15dp"
            app:cardElevation="5dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <com.google.android.material.imageview.ShapeableImageView
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:src="@drawable/icon_atmospheric_pressure" />

                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/txtWindPressure"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_gravity="center_vertical"
                    android:gravity="center_vertical"
                    android:textColor="@color/black"
                    android:textSize="14sp" />
            </LinearLayout>
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/windHumidityLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:layout_weight="1"
            app:cardBackgroundColor="@color/white"
            app:cardCornerRadius="15dp"
            app:cardElevation="5dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <com.google.android.material.imageview.ShapeableImageView
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:src="@drawable/icon_drop" />

                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/txtWindHumidity"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_gravity="center_vertical"
                    android:gravity="center_vertical"
                    android:textColor="@color/black"
                    android:textSize="14sp" />
            </LinearLayout>
        </androidx.cardview.widget.CardView>
    </LinearLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="400dp"
        android:layout_marginHorizontal="10dp"
        android:layout_marginTop="15dp"
        android:background="@drawable/forecast_view_background">

        <com.google.android.material.textview.MaterialTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:gravity="center"
            android:text="Weather Forecast"
            android:textColor="@color/white"
            android:textSize="14dp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:layout_marginHorizontal="10dp"
        android:layout_marginTop="5dp"
        android:orientation="horizontal"
        android:weightSum="3">

        <LinearLayout
            android:id="@+id/uvLayout"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:layout_weight="1"
            android:background="@drawable/forecast_view_background"
            android:orientation="vertical"
            android:padding="10dp">

            <com.google.android.material.imageview.ShapeableImageView
                android:layout_width="35dp"
                android:layout_height="35dp"
                android:src="@drawable/icon_sunny"
                android:tint="#FBBD00" />

            <com.google.android.material.textview.MaterialTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:gravity="center_vertical"
                android:text="@string/uv_index"
                android:textColor="@color/grey"
                android:textSize="12sp" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/txtUV"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:gravity="center_vertical"
                android:textColor="@color/white"
                android:textSize="14sp" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/feelsLikeLayout"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:layout_weight="1"
            android:background="@drawable/forecast_view_background"
            android:orientation="vertical"
            android:padding="10dp">

            <com.google.android.material.imageview.ShapeableImageView
                android:layout_width="35dp"
                android:layout_height="35dp"
                android:src="@drawable/icon_thermostat"
                android:tint="#D82222" />

            <com.google.android.material.textview.MaterialTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:gravity="center_vertical"
                android:text="@string/feels_like"
                android:textColor="@color/grey"
                android:textSize="12sp" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/txtFeelsLike"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:gravity="center_vertical"
                android:textColor="@color/white"
                android:textSize="14sp" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/visibilityLayout"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:layout_weight="1"
            android:background="@drawable/forecast_view_background"
            android:orientation="vertical"
            android:padding="10dp">

            <com.google.android.material.imageview.ShapeableImageView
                android:layout_width="35dp"
                android:layout_height="35dp"
                android:src="@drawable/icon_visibility"
                android:tint="@color/dark_grey" />

            <com.google.android.material.textview.MaterialTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:gravity="center_vertical"
                android:text="@string/visibility"
                android:textColor="@color/grey"
                android:textSize="12sp" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/txtVisibility"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:gravity="center_vertical"
                android:textColor="@color/white"
                android:textSize="14sp" />
        </LinearLayout>
    </LinearLayout>
</LinearLayout>